--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/cli": "~13.3.1",
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
+    "@types/google.maps": "^3.55.0",
     "@types/node": "^12.11.1",
     "autoprefixer": "^10.4.22",
     "jasmine-core": "~4.0.0",
